[package]
name = "andino"
description = "Crate for Andino, a Rust library for working with the Andino robotics platform."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
itertools = { workspace = true }
log = { workspace = true }
serialport = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
log = { workspace = true }
