[package]
name = "andino"
description = "Crate for Andino, a Rust library for working with the Andino robotics platform."
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
itertools = { workspace = true }
log = { workspace = true }
serialport = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
